k8s/admin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
spec:
  minReadySeconds: 60
  replicas: 1
  selector:
    matchLabels:
      app: admin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: registry.cn-beijing.aliyuncs.com/wdora/aidoor-admin:20250721102836
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
      terminationGracePeriodSeconds: 180
